--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 spring.thymeleaf.template-loader-path: classpath:/templates
 spring.thymeleaf.suffix: .html
 spring.thymeleaf.cache: false
+
+spring.jpa.hibernate.ddl-auto=none
+spring.datasource.url=jdbc:mysql://localhost:3306/catholicstream
+spring.datasource.username=lejin
+spring.datasource.password=lejin
