--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,6 @@ spring.thymeleaf.suffix: .html
 spring.thymeleaf.cache: false
 
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://localhost:3306/catholicstream
+nonespring.datasource.url=jdbc:mysql://localhost:3306/catholicstream
 spring.datasource.username=lejin
 spring.datasource.password=lejin
