--- a/package.json
+++ b/package.json
@@ -30,5 +30,11 @@
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.28",
     "wowjs": "^1.1.3"
+  },
+  "devDependencies": {
+    "del": "^5.1.0",
+    "gulp-clean-css": "^4.3.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-csso": "^4.0.1"
   }
 }
