--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "del": "^5.1.0",
     "gulp-clean-css": "^4.3.0",
     "gulp-concat": "^2.6.1",
-    "gulp-csso": "^4.0.1"
+    "gulp-csso": "^4.0.1",
+    "gulp-minify": "^3.1.0"
   }
 }
