--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "bootstrap": "^4.4.1",
     "bootstrap-select": "^1.13.12",
     "gulp": "^4.0.2",
-    "jquery": "~3.4.0",
+    "jquery": "3.4.1",
     "jquery.easing": "^1.4.1",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.28",
