--- a/package.json
+++ b/package.json
@@ -25,10 +25,11 @@
     "bootstrap": "^4.4.1",
     "bootstrap-select": "^1.13.12",
     "gulp": "^4.0.2",
-    "jquery": "3.5.0",
+    "jquery": "3.4.1",
     "jquery.easing": "^1.4.1",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.28",
+    "tiny-slider": "^2.9.2",
     "wowjs": "^1.1.3"
   },
   "devDependencies": {
@@ -41,7 +42,7 @@
     "gulp-rev": "^9.0.0",
     "gulp-rev-rewrite": "^3.0.3",
     "gulp-sass": "^4.1.0",
-    "node-sass": "^4.14.0",
+    "node-sass": "^4.14.1",
     "rev-del": "^2.0.0"
   }
 }
