--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
 node_modules
+.idea/uiDesigner.xml
+.idea/uiDesigner.xml
+.idea/libraries/Maven__com_google_code_gson_gson_2_8_6.xml
+catholicstream.iml
