--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
     "animate.css": "^3.7.2",
     "bootstrap": "^4.4.1",
     "bootstrap-select": "^1.13.12",
+    "glider-js": "^1.7.3",
     "gulp": "^4.0.2",
-    "jquery": "3.4.1",
+    "jquery": "^3.5.1",
     "jquery.easing": "^1.4.1",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.28",
-    "tiny-slider": "^2.9.2",
     "wowjs": "^1.1.3"
   },
   "devDependencies": {
